--- a/extensions/curator/config/delete_logs_files_curator.yml
+++ b/extensions/curator/config/delete_logs_files_curator.yml
@@ -1,10 +1,13 @@
-﻿actions:
+actions:
   1:
     action: delete_indices
     description: "Delete indices older than 30 days"
     options:
       ignore_empty_list: True
     filters:
+      - filtertype: pattern
+        kind: prefix
+        value: logs-
       - filtertype: age
         source: creation_date
         direction: older
