--- a/extensions/fleet/agent-apmserver-compose.yml
+++ b/extensions/fleet/agent-apmserver-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
   apm-server:
     build:
@@ -7,25 +5,25 @@ services:
       args:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
     container_name: apm-server
+    hostname: apm-server
+    ports:
+      - 8200:8200
     volumes:
       - apm-server:/usr/share/elastic-agent/state:Z
     environment:
-      FLEET_ENROLL: '1'
+      FLEET_ENROLL: 1
       FLEET_TOKEN_POLICY_NAME: Agent Policy APM Server
-      FLEET_INSECURE: '1'
+      FLEET_INSECURE: 1
       FLEET_URL: http://fleet-server:8220
       ELASTICSEARCH_USERNAME: elastic
       ELASTICSEARCH_PASSWORD: ${ELASTIC_PASSWORD:-}
-    ports:
-      - 8200:8200
-    hostname: apm-server
-    restart: unless-stopped
     networks:
       - yan
     depends_on:
       - elasticsearch
       - kibana
       - fleet-server
+    restart: unless-stopped
 
 volumes:
   apm-server:
