--- a/extensions/enterprise-search/enterprise-search-compose.yml
+++ b/extensions/enterprise-search/enterprise-search-compose.yml
@@ -10,8 +10,8 @@ services:
     volumes:
       - ./extensions/enterprise-search/config/enterprise-search.yml:/usr/share/enterprise-search/config/enterprise-search.yml:ro,Z
     environment:
-      JAVA_OPTS: -Xms2g -Xmx2g
-      ENT_SEARCH_DEFAULT_PASSWORD: changeme
+      JAVA_OPTS: "-Xms2g -Xmx2g"
+      ENT_SEARCH_DEFAULT_PASSWORD: "changeme"
       ELASTIC_PASSWORD: ${ELASTIC_PASSWORD:-}
     networks:
       - yan
