--- a/extensions/logspout/logspout-compose.yml
+++ b/extensions/logspout/logspout-compose.yml
@@ -9,8 +9,8 @@ services:
         target: /var/run/docker.sock
         read_only: true
     environment:
-      ROUTE_URIS: logstash://logstash:50000
-      LOGSTASH_TAGS: docker-elk
+      ROUTE_URIS: "logstash://logstash:50000"
+      LOGSTASH_TAGS: "docker-elk"
     networks:
       - yan
     depends_on:
